--- a/src/components/Input/input.css
+++ b/src/components/Input/input.css
@@ -8,7 +8,7 @@
 .icon {
     position: absolute;
     left: 10px;
-    top: 5px;
+    top: 2px;
     background-image: url(../../assets/color-hunt-icons.svg);
     background-repeat: no-repeat;
     background-position-y: 50%;
@@ -21,6 +21,11 @@
     width: 100%;
     height: 100%;
     background-color: transparent;
+    padding-left: 40px;
+    font-family: poppins, sans-serif;
+}
+
+.inputSearch::placeholder {
 }
 
 .inputSearch.border {
