--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: poppins, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -16,11 +16,11 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+    color: rgba(0, 0, 0, .9);
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #000;
 }
 
 body {
@@ -60,7 +60,7 @@ button:focus-visible {
     background-color: #ffffff;
   }
   a:hover {
-    color: #747bff;
+    color: #000;
   }
   button {
     background-color: #f9f9f9;
