--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,12 @@
   padding: 2rem;
   text-align: center;
 }
+
+.cardContainer {
+    display: flex;
+    width: 100%;
+    column-gap: 30px;
+    row-gap: 50px;
+    justify-content: center;
+    flex-flow: wrap;
+  }
